Enable compact object headers with the embedded JDK
This allows us to adopt the feature early, but limited to the embedded JDK we control. Users of the no-JDK variant of Bazel are not affected by this change, in particular they are not limited to running Bazel with a JDK 24.

Closes #25651.

PiperOrigin-RevId: 739870870
Change-Id: I82ad97ae514f4cbdc4f5e8007ece1b288c56f3bd